// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Snapshots should match the narrow snapshot 1`] = `
<div
  className="container mx-auto px-4 max-w-xl"
>
  I know kung fu.
</div>
`;

exports[`Container Snapshots should match the snapshot 1`] = `
<div
  className="container mx-auto px-4"
>
  I know kung fu.
</div>
`;
